<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonutActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/donut_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/donut_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/image"
            android:paddingBottom="10dp"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/donut_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title"
            android:textColor="@color/black"
            android:layout_alignBottom="@id/donut_image"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:id="@+id/donut_prep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prep_cook_time_2hrs"
            android:textColor="@color/black"
            android:layout_below="@id/donut_title"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginTop="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:drawableStartCompat="@drawable/ic_prep_time" />

        <!--Add a Horizontal Line-->
        <View
            android:id="@+id/donut_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/donut_prep"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/donut_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_short_description"
            android:textColor="@color/purple_200"
            android:layout_below="@id/donut_divider"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginTop="3dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:textStyle="italic"
            />

    </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_below="@+id/donut_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_prepare_donuts"
            android:textStyle="bold"
            android:textColor="@color/teal_700"/>
    </RelativeLayout>

</RelativeLayout>


