<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/image"
            android:paddingBottom="10dp"
            android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_title"
        android:textColor="@color/black"
        android:layout_alignBottom="@id/recipe_image"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:id="@+id/recipe_prep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prep_cook_time_2hrs"
            android:textColor="@color/black"
            android:layout_below="@id/recipe_title"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginTop="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:drawableStartCompat="@drawable/ic_prep_time" />

        <!--Add a Horizontal Line-->
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/recipe_prep"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/recipe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_short_description"
            android:textColor="@color/purple_200"
            android:layout_below="@id/divider"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginTop="3dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:textStyle="italic"
             />

    </RelativeLayout>
</androidx.cardview.widget.CardView>